@@ -112,8 +112,11 @@ class SøknadOversetter {
                     entry.getKey().getTilOgMed(),
                     true,
                     Landkoder.fraKode(entry.getValue().getLand().getLandkode()),
-                    entry.getValue().getÅrsak() == null ? UtenlandsoppholdÅrsak.INGEN : UtenlandsoppholdÅrsak.fraKode(entry.getValue().getÅrsak().name())))
-            .collect(Collectors.toList());
+                    entry.getValue().getÅrsak() == null ? UtenlandsoppholdÅrsak.INGEN : UtenlandsoppholdÅrsak.fraKode(entry.getValue().getÅrsak().name()),
+                    entry.getValue().getErSammenMedBarnet()
+                )
+            )
+            .toList();
 
         if (utenlandsopphold.getPerioderSomSkalSlettes() != null) {
             utenlandsoppholdPerioder.addAll(utenlandsopphold.getPerioderSomSkalSlettes()
@@ -125,8 +128,11 @@ class SøknadOversetter {
                         entry.getKey().getTilOgMed(),
                         false,
                         Landkoder.fraKode(entry.getValue().getLand().getLandkode()),
-                        entry.getValue().getÅrsak() == null ? UtenlandsoppholdÅrsak.INGEN : UtenlandsoppholdÅrsak.fraKode(entry.getValue().getÅrsak().name())))
-                .toList());
+                        entry.getValue().getÅrsak() == null ? UtenlandsoppholdÅrsak.INGEN : UtenlandsoppholdÅrsak.fraKode(entry.getValue().getÅrsak().name()),
+                        entry.getValue().getErSammenMedBarnet()
+                    )
+                )
+                .collect(Collectors.toList()));
         }
         return utenlandsoppholdPerioder;
     }
